<resources>
    <string name="app_name">NaukNauk</string>
    <string name="search_text_view_string">Search</string>
    <string name="favorites_text_view_string">Favorites</string>
    <string name="search_by_name_text_view_string">Search by Name</string>
    <string name="search_by_department_text_view_string">Search by Department</string>
    <string name="search_by_name_text_view_hint">Enter Name</string>
    <string name="title_activity_professor">ProfessorActivity</string>
    <string name="available_false">This Professor is not in their office</string>
    <string name="available_true">This Professor is in their office</string>
    <string name="login_password">Password</string>
    <string name="login_username">GU Username</string>
    <string name="login_prompt">Login</string>
    <string name="professor_name">Professor Name</string>
    <string name="professor_department">Department</string>
    <string name="professor_office_location">Office Location</string>
    <string name="professor_office_hours">Office Hours</string>
    <string name="professor_phone_number">Phone Number</string>
    <string name="professor_email">Email</string>
</resources>
