<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.irish.nauknaukfinalproject.SearchActivity">

    <TextView
        android:id="@+id/SearchByNameTextView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/search_by_name_text_view_string"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/textColorWhite"
        android:background="@color/searchColor"
        android:layout_rowWeight="1"
        android:drawableEnd="@drawable/search_name_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NameSearchBar"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/search_by_name_text_view_hint"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/textColorWhite"
        android:layout_rowWeight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/SearchByDepartmentTextView"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/search_by_department_text_view_string"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/textColorWhite"
        android:background="@color/searchByDepartmentColor"
        android:layout_rowWeight="1"
        android:drawableEnd="@drawable/search_name_department"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ListView
        android:id="@+id/SearchBar"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/search_text_view_string"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/textColorWhite"
        android:background="@color/searchByDepartmentListColor"
        android:layout_rowWeight="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


</GridLayout>
