<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/professorLayout"
tools:context="com.example.irish.nauknaukfinalproject.MainActivity">

    <TextView
        android:id="@+id/ProfessorAvailableTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:background="@color/available_false"
        android:gravity="center"
        android:text="@string/available_false"
        android:textColor="@color/textColorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/ProfessorNameTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_rowSpan="1"
        android:layout_rowWeight="3"
        android:background="@color/professor1"
        android:gravity="center"
        android:text="@string/professor_name"
        android:textColor="@color/textColorWhite"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DepartmentTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:layout_rowWeight="3"
        android:background="@color/professor2"
        android:gravity="center"
        android:text="@string/professor_department"
        android:textColor="@color/textColorWhite"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/OfficeLocationTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:layout_rowWeight="3"
        android:background="@color/professor2"
        android:gravity="center"
        android:text="@string/professor_office_location"
        android:textColor="@color/textColorWhite"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/OfficeHoursTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_columnWeight="1"
        android:layout_row="3"
        android:layout_rowSpan="1"
        android:layout_rowWeight="3"
        android:background="@color/professor3"
        android:gravity="center"
        android:text="@string/professor_office_hours"
        android:textColor="@color/textColorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/PhoneNumberTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_row="4"
        android:layout_rowSpan="1"
        android:layout_rowWeight="3"
        android:background="@color/professor4"
        android:gravity="center"
        android:text="@string/professor_phone_number"
        android:textColor="@color/textColorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/PhoneNumberImageButton"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/textColorWhite"
        android:background="@color/professor4"
        android:src="@android:drawable/ic_menu_call"
        android:layout_rowWeight="3"
        android:layout_columnWeight="1"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/EmailTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_row="5"
        android:layout_rowSpan="1"
        android:layout_rowWeight="3"
        android:background="@color/professor5"
        android:gravity="center"
        android:text="@string/professor_email"
        android:textColor="@color/textColorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/EmailImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_row="5"
        android:layout_rowSpan="1"
        android:layout_rowWeight="3"
        android:background="@color/professor5"
        android:gravity="center"
        android:src="@android:drawable/ic_dialog_email"
        android:textColor="@color/textColorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</GridLayout>